--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -28,7 +28,24 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][1][Applets][110][Configuration]
-PreloadWeight=97
+PreloadWeight=84
+
+[Containments][1][Applets][116]
+immutability=1
+plugin=org.kde.plasma.kickerdash
+
+[Containments][1][Applets][116][Configuration]
+PreloadWeight=92
+
+[Containments][1][Applets][116][Configuration][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
+
+[Containments][1][Applets][116][Configuration][General]
+customButtonImage=distributor-logo-archlinux
+favoriteSystemActions=logout
+favoritesPortedToKAstats=true
+useCustomButtonImage=true
 
 [Containments][1][Applets][2]
 immutability=1
@@ -43,33 +60,14 @@ animationWindowAddedInGroup=false
 animationWindowInAttention=false
 isInLatteDock=true
 launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop
-
-[Containments][1][Applets][74]
-immutability=1
-plugin=OnzeMenu
-
-[Containments][1][Applets][74][Configuration]
-PreloadWeight=84
-
-[Containments][1][Applets][74][Configuration][ConfigDialog]
-DialogHeight=558
-DialogWidth=720
-
-[Containments][1][Applets][74][Configuration][General]
-customButtonImage=distributor-logo-archlinux
-favoriteSystemActions=logout,lock-screen
-favoritesPortedToKAstats=true
-useCustomButtonImage=true
-
-[Containments][1][Applets][74][Shortcuts]
-global=Meta+Z
+manualScrollTasksType=Disabled
 
 [Containments][1][Applets][92]
 immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=46
+PreloadWeight=35
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
@@ -85,7 +83,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=100
+PreloadWeight=89
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -99,7 +97,7 @@ PreloadWeight=0
 advanced=false
 alignment=10
 alignmentUpgraded=true
-appletOrder=74;2;93;92;110
+appletOrder=116;2;93;92;110
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
@@ -155,7 +153,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=6
+PreloadWeight=0
 
 [Containments][94][Applets][102]
 immutability=1
@@ -169,21 +167,21 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=92
+PreloadWeight=76
 
 [Containments][94][Applets][104]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=31
+PreloadWeight=15
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=36
+PreloadWeight=20
 
 [Containments][94][Applets][108]
 immutability=1
@@ -201,7 +199,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=12
+PreloadWeight=0
 
 [Containments][94][Applets][112]
 immutability=1
@@ -222,14 +220,14 @@ immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][94][Applets][96]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][94][Applets][96][Configuration]
-PreloadWeight=11
+PreloadWeight=0
 
 [Containments][94][Applets][97]
 immutability=1
