--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -32,7 +32,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:electron-qq.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:google-chrome.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -79,7 +79,7 @@ appletOrder=69;2;54;49
 durationTime=x1
 iconSize=38
 maxLength=80
-panelSize=5
+panelSize=100
 panelTransparency=30
 shadowOpacity=60
 shadowSize=45
@@ -186,12 +186,8 @@ plugin=org.kde.plasma.vault
 [Containments][15][Applets][32][Configuration]
 PreloadWeight=0
 
-[Containments][15][Applets][33]
-immutability=1
-plugin=org.kde.ktp-contactlist
-
 [Containments][15][Applets][33][Configuration]
-PreloadWeight=0
+PreloadWeight=42
 
 [Containments][15][Applets][34]
 immutability=1
@@ -240,7 +236,7 @@ DialogHeight=558
 DialogWidth=720
 
 [Containments][15][General]
-extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
+extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
 knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
 scaleIconsToFit=true
 
@@ -288,7 +284,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=38
+PreloadWeight=22
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -296,7 +292,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=49
+PreloadWeight=33
 
 [Containments][4][Applets][61]
 immutability=1
