--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -28,7 +28,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][1][Applets][110][Configuration]
-PreloadWeight=88
+PreloadWeight=98
 
 [Containments][1][Applets][116]
 immutability=1
@@ -59,7 +59,7 @@ animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl-bin.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:firefox.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl-bin.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop
 manualScrollTasksType=Disabled
 
 [Containments][1][Applets][92]
@@ -181,7 +181,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=9
+PreloadWeight=18
 
 [Containments][94][Applets][108]
 immutability=1
@@ -220,7 +220,7 @@ immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][94][Applets][96]
 immutability=1
