--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -215,6 +215,10 @@ plugin=org.kde.plasma.mediacontroller
 [Containments][94][Applets][113][Configuration]
 PreloadWeight=0
 
+[Containments][94][Applets][117]
+immutability=1
+plugin=org.kde.plasma.manage-inputmethod
+
 [Containments][94][Applets][95]
 immutability=1
 plugin=org.kde.plasma.clipboard
@@ -259,9 +263,9 @@ DialogHeight=558
 DialogWidth=720
 
 [Containments][94][General]
-extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect,org.kde.plasma.manage-inputmethod
 hiddenItems=org.kde.plasma.notifications,org.kde.ktp-contactlist
-knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect,org.kde.plasma.manage-inputmethod
 scaleIconsToFit=true
 
 [LayoutSettings]
