--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -28,14 +28,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][1][Applets][110][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][1][Applets][116]
 immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][116][Configuration]
-PreloadWeight=76
+PreloadWeight=68
 
 [Containments][1][Applets][116][Configuration][ConfigDialog]
 DialogHeight=558
@@ -67,7 +67,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
@@ -83,7 +83,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -167,21 +167,21 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=80
+PreloadWeight=72
 
 [Containments][94][Applets][104]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=23
+PreloadWeight=15
 
 [Containments][94][Applets][108]
 immutability=1
@@ -199,7 +199,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][94][Applets][112]
 immutability=1
@@ -219,12 +219,15 @@ PreloadWeight=0
 immutability=1
 plugin=org.kde.plasma.manage-inputmethod
 
+[Containments][94][Applets][117][Configuration]
+PreloadWeight=42
+
 [Containments][94][Applets][95]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][94][Applets][96]
 immutability=1
