--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -23,6 +23,76 @@ viewType=0
 visibility=2
 wallpaperplugin=org.kde.image
 
+[Containments][1][Applets][119]
+immutability=1
+plugin=org.kde.plasma.kickerdash
+
+[Containments][1][Applets][119][Configuration]
+PreloadWeight=92
+
+[Containments][1][Applets][119][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][1][Applets][119][Configuration][General]
+customButtonImage=distributor-logo-archlinux
+favoriteSystemActions=logout
+favoritesPortedToKAstats=true
+useCustomButtonImage=true
+
+[Containments][1][Applets][121]
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][1][Applets][121][Configuration]
+PreloadWeight=49
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][1][Applets][121][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][1][Applets][121][Configuration][General]
+labelMode=2
+url=file:///home/kiteab/Downloads
+
+[Containments][1][Applets][122]
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][1][Applets][122][Configuration]
+PreloadWeight=55
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][1][Applets][122][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][1][Applets][122][Configuration][General]
+url=file:///home/kiteab/Pictures
+
 [Containments][1][Applets][2]
 immutability=1
 plugin=org.kde.latte.plasmoid
@@ -32,7 +102,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:google-chrome.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:hmcl-bin.desktop,applications:com.qq.tim.spark.desktop,file:///usr/share/applications/discord.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -48,23 +118,6 @@ plugin=org.kde.latte.separator
 [Containments][1][Applets][54][Configuration]
 PreloadWeight=0
 
-[Containments][1][Applets][69]
-immutability=1
-plugin=org.kde.plasma.dittomenu
-
-[Containments][1][Applets][69][Configuration]
-PreloadWeight=0
-
-[Containments][1][Applets][69][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][1][Applets][69][Configuration][General]
-customButtonImage=app-launcher
-favoriteSystemActions=logout,lock-screen
-favoritesPortedToKAstats=true
-useCustomButtonImage=true
-
 [Containments][1][ConfigDialog]
 DialogHeight=903
 DialogWidth=539
@@ -75,12 +128,12 @@ PreloadWeight=0
 [Containments][1][General]
 advanced=false
 alignmentUpgraded=true
-appletOrder=69;2;54;49
+appletOrder=119;2;54;121;122;49
 durationTime=x1
 iconSize=38
 maxLength=80
 panelSize=100
-panelTransparency=30
+panelTransparency=20
 shadowOpacity=60
 shadowSize=45
 shadowsUpgraded=true
@@ -111,6 +164,13 @@ lastScreen=-1
 location=3
 plugin=org.kde.plasma.private.systemtray
 wallpaperplugin=org.kde.image
+
+[Containments][15][Applets][118]
+immutability=1
+plugin=org.kde.plasma.manage-inputmethod
+
+[Containments][15][Applets][118][Configuration]
+PreloadWeight=42
 
 [Containments][15][Applets][16]
 immutability=1
@@ -186,9 +246,6 @@ plugin=org.kde.plasma.vault
 [Containments][15][Applets][32][Configuration]
 PreloadWeight=0
 
-[Containments][15][Applets][33][Configuration]
-PreloadWeight=42
-
 [Containments][15][Applets][34]
 immutability=1
 plugin=org.kde.plasma.battery
@@ -217,27 +274,13 @@ plugin=org.kde.plasma.keyboardlayout
 [Containments][15][Applets][70][Configuration]
 PreloadWeight=0
 
-[Containments][15][Applets][72]
-immutability=1
-plugin=org.kde.plasma.mediacontroller_plus
-
-[Containments][15][Applets][72][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][73]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][15][Applets][73][Configuration]
-PreloadWeight=0
-
 [Containments][15][ConfigDialog]
 DialogHeight=558
 DialogWidth=720
 
 [Containments][15][General]
-extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
-knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
+extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
+knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
 scaleIconsToFit=true
 
 [Containments][4]
@@ -272,7 +315,6 @@ PreloadWeight=0
 customDateFormat=ddd
 dateFormat=custom
 enabledCalendarPlugins=/usr/lib/qt/plugins/plasmacalendarplugins/holidaysevents.so
-showDate=false
 use24hFormat=2
 
 [Containments][4][Applets][12][Configuration][ConfigDialog]
@@ -284,7 +326,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=16
+PreloadWeight=8
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -292,7 +334,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=22
+PreloadWeight=14
 
 [Containments][4][Applets][61]
 immutability=1
@@ -324,8 +366,7 @@ DialogHeight=540
 DialogWidth=720
 
 [Containments][4][Applets][9][Configuration][General]
-bold=true
-noWindowText=Finder
+noWindowText=Plasma
 noWindowType=text
 textType=1
 
@@ -359,6 +400,7 @@ solidBackgroundForMaximized=true
 splitterPosition=3
 splitterPosition2=4
 tasksUpgraded=true
+themeColors=SmartThemeColors
 titleTooltips=false
 zoomLevel=0
 
