--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -28,7 +28,7 @@ immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][119][Configuration]
-PreloadWeight=92
+PreloadWeight=84
 
 [Containments][1][Applets][119][Configuration][ConfigDialog]
 DialogHeight=540
@@ -50,7 +50,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][121][Configuration]
-PreloadWeight=59
+PreloadWeight=53
 activityId=
 formfactor=0
 immutability=1
@@ -77,7 +77,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][122][Configuration]
-PreloadWeight=60
+PreloadWeight=69
 activityId=
 formfactor=0
 immutability=1
@@ -91,6 +91,7 @@ DialogHeight=540
 DialogWidth=720
 
 [Containments][1][Applets][122][Configuration][General]
+labelMode=2
 url=file:///home/kiteab/Pictures
 
 [Containments][1][Applets][2]
@@ -129,6 +130,7 @@ PreloadWeight=0
 advanced=false
 alignmentUpgraded=true
 appletOrder=119;2;54;121;122;49
+backgroundRadius=15
 durationTime=x1
 iconSize=38
 maxLength=80
@@ -170,7 +172,7 @@ immutability=1
 plugin=org.kde.plasma.manage-inputmethod
 
 [Containments][15][Applets][118][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][15][Applets][123]
 immutability=1
@@ -324,7 +326,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
@@ -341,7 +343,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=13
+PreloadWeight=5
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -349,7 +351,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=19
+PreloadWeight=16
 
 [Containments][4][Applets][8]
 immutability=1
@@ -374,7 +376,7 @@ DialogHeight=540
 DialogWidth=720
 
 [Containments][4][Applets][9][Configuration][General]
-noWindowText=Plasma
+noWindowText=KDE Plasma
 noWindowType=text
 textType=1
 
