--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -131,6 +131,7 @@ advanced=false
 alignmentUpgraded=true
 appletOrder=119;2;54;121;122;49
 backgroundRadius=15
+backgroundShadowSize=8
 durationTime=x1
 iconSize=38
 maxLength=80
@@ -179,14 +180,14 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][123][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][15][Applets][124]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][124][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][15][Applets][16]
 immutability=1
