--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -103,7 +103,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:hmcl-bin.desktop,applications:com.qq.tim.spark.desktop,file:///usr/share/applications/discord.desktop,applications:teamspeak3.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:hmcl-bin.desktop,applications:com.qq.tim.spark.desktop,file:///usr/share/applications/discord.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:org.kde.krita.desktop,applications:gimp.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
