--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -130,6 +130,7 @@ PreloadWeight=0
 advanced=false
 alignmentUpgraded=true
 appletOrder=119;2;54;121;122;49
+backgroundAllCorners=true
 backgroundRadius=15
 backgroundShadowSize=8
 durationTime=x1
@@ -137,6 +138,7 @@ iconSize=38
 maxLength=80
 panelSize=100
 panelTransparency=20
+screenEdgeMargin=10
 shadowOpacity=60
 shadowSize=45
 shadowsUpgraded=true
