--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -28,7 +28,7 @@ immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][119][Configuration]
-PreloadWeight=60
+PreloadWeight=52
 
 [Containments][1][Applets][119][Configuration][ConfigDialog]
 DialogHeight=540
@@ -50,7 +50,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][121][Configuration]
-PreloadWeight=30
+PreloadWeight=14
 activityId=
 formfactor=0
 immutability=1
@@ -77,7 +77,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][122][Configuration]
-PreloadWeight=21
+PreloadWeight=5
 activityId=
 formfactor=0
 immutability=1
@@ -175,7 +175,15 @@ immutability=1
 plugin=org.kde.plasma.manage-inputmethod
 
 [Containments][15][Applets][118][Configuration]
-PreloadWeight=10
+PreloadWeight=2
+
+[Containments][15][Applets][123]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][15][Applets][124]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][16]
 immutability=1
@@ -332,7 +340,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=4
+PreloadWeight=0
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
