--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -28,7 +28,7 @@ immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][119][Configuration]
-PreloadWeight=52
+PreloadWeight=44
 
 [Containments][1][Applets][119][Configuration][ConfigDialog]
 DialogHeight=540
@@ -50,7 +50,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][121][Configuration]
-PreloadWeight=14
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -77,7 +77,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][122][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -132,7 +132,7 @@ alignmentUpgraded=true
 appletOrder=119;2;54;121;122;49
 backgroundAllCorners=true
 backgroundRadius=20
-backgroundShadowSize=12
+backgroundShadowSize=8
 durationTime=x1
 iconSize=38
 maxLength=80
@@ -175,15 +175,21 @@ immutability=1
 plugin=org.kde.plasma.manage-inputmethod
 
 [Containments][15][Applets][118][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][15][Applets][123]
 immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
+[Containments][15][Applets][123][Configuration]
+PreloadWeight=0
+
 [Containments][15][Applets][124]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
+
+[Containments][15][Applets][124][Configuration]
+PreloadWeight=0
 
 [Containments][15][Applets][16]
 immutability=1
@@ -264,7 +270,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][15][Applets][34][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][15][Applets][34][Configuration][ConfigDialog]
 DialogHeight=540
@@ -340,7 +346,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -399,11 +405,10 @@ iconSize=20
 inConfigureAppletsMode=true
 panelPosition=10
 panelSize=100
-panelTransparency=30
+panelTransparency=50
 plasmaBackgroundForPopups=true
 shadows=None
 shadowsUpgraded=true
-solidBackgroundForMaximized=true
 splitterPosition=3
 splitterPosition2=4
 tasksUpgraded=true
