--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -16,6 +16,7 @@ onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
+screensGroup=0
 settingsComplexity=4
 timerHide=700
 timerShow=200
@@ -28,7 +29,7 @@ immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][119][Configuration]
-PreloadWeight=20
+PreloadWeight=12
 
 [Containments][1][Applets][119][Configuration][ConfigDialog]
 DialogHeight=540
@@ -50,7 +51,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][121][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -177,20 +178,6 @@ plugin=org.kde.plasma.manage-inputmethod
 [Containments][15][Applets][118][Configuration]
 PreloadWeight=0
 
-[Containments][15][Applets][123]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][15][Applets][123][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][124]
-immutability=1
-plugin=org.kde.plasma.mediacontroller_plus
-
-[Containments][15][Applets][124][Configuration]
-PreloadWeight=0
-
 [Containments][15][Applets][16]
 immutability=1
 plugin=org.kde.kdeconnect
@@ -203,7 +190,7 @@ immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][15][Applets][17][Configuration]
-PreloadWeight=0
+PreloadWeight=7
 
 [Containments][15][Applets][18]
 immutability=1
@@ -310,13 +297,14 @@ enableKWinEdges=true
 formfactor=2
 immutability=1
 isPreferredForShortcuts=false
-lastScreen=-1
+lastScreen=10
 location=3
 name=
 onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
+screensGroup=0
 settingsComplexity=4
 timerHide=700
 timerShow=0
@@ -346,7 +334,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=7
+PreloadWeight=14
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -354,7 +342,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][4][Applets][8]
 immutability=1
