--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -178,6 +178,20 @@ plugin=org.kde.plasma.manage-inputmethod
 [Containments][15][Applets][118][Configuration]
 PreloadWeight=0
 
+[Containments][15][Applets][123]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][15][Applets][123][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][124]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][15][Applets][124][Configuration]
+PreloadWeight=0
+
 [Containments][15][Applets][16]
 immutability=1
 plugin=org.kde.kdeconnect
