--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -236,7 +236,11 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=15
+PreloadWeight=100
+
+[Containments][15][Applets][28][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
 
 [Containments][15][Applets][29]
 immutability=1
@@ -348,7 +352,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=45
+PreloadWeight=100
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
