--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -183,14 +183,14 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][123][Configuration]
-PreloadWeight=0
+PreloadWeight=34
 
 [Containments][15][Applets][124]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][124][Configuration]
-PreloadWeight=0
+PreloadWeight=34
 
 [Containments][15][Applets][16]
 immutability=1
@@ -211,7 +211,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=40
+PreloadWeight=32
 
 [Containments][15][Applets][19]
 immutability=1
@@ -229,7 +229,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=25
+PreloadWeight=17
 
 [Containments][15][Applets][28]
 immutability=1
@@ -241,6 +241,9 @@ PreloadWeight=100
 [Containments][15][Applets][28][Configuration][ConfigDialog]
 DialogHeight=540
 DialogWidth=720
+
+[Containments][15][Applets][28][Configuration][General]
+currentTab=streams
 
 [Containments][15][Applets][29]
 immutability=1
@@ -335,7 +338,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=25
+PreloadWeight=17
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
@@ -360,7 +363,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=5
+PreloadWeight=2
 
 [Containments][4][Applets][8]
 immutability=1
