--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -104,7 +104,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:hmcl-bin.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:org.kde.krita.desktop,applications:gimp.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl-bin.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:org.kde.krita.desktop,applications:gimp.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -204,7 +204,7 @@ immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][15][Applets][17][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][15][Applets][18]
 immutability=1
@@ -360,7 +360,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=12
+PreloadWeight=22
 
 [Containments][4][Applets][8]
 immutability=1
