--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -178,6 +178,20 @@ plugin=org.kde.plasma.manage-inputmethod
 [Containments][15][Applets][118][Configuration]
 PreloadWeight=0
 
+[Containments][15][Applets][123]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][15][Applets][123][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][124]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][15][Applets][124][Configuration]
+PreloadWeight=0
+
 [Containments][15][Applets][16]
 immutability=1
 plugin=org.kde.kdeconnect
@@ -197,7 +211,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=16
+PreloadWeight=0
 
 [Containments][15][Applets][19]
 immutability=1
@@ -215,14 +229,14 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=1
+PreloadWeight=0
 
 [Containments][15][Applets][28]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=84
+PreloadWeight=78
 
 [Containments][15][Applets][28][Configuration][ConfigDialog]
 DialogHeight=540
@@ -321,7 +335,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=11
+PreloadWeight=0
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
@@ -338,7 +352,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=84
+PreloadWeight=78
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -346,7 +360,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=6
+PreloadWeight=0
 
 [Containments][4][Applets][8]
 immutability=1
