--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -104,7 +104,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl-bin.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl-bin.desktop,applications:telegramdesktop.desktop,file:///usr/share/applications/discord.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -197,7 +197,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][15][Applets][17]
 immutability=1
@@ -211,7 +211,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=30
+PreloadWeight=35
 
 [Containments][15][Applets][19]
 immutability=1
